# substrate-tests

./: .gitignore  Cargo.toml  README.md  rustc-ice-2024-04-17T14_31_41-88654.txt  rustc-ice-2024-04-17T14_31_41-88655.txt
client_example/: Cargo.toml
client_example/src/: main.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/lightning/: Cargo.toml
pallets/lightning/src/: lib.rs
pallets/node-staker/: Cargo.toml
pallets/node-staker/src/: lib.rs
pallets/sudo-authorities/: Cargo.toml
pallets/user-manager/: Cargo.toml
pallets/user-manager/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build.Dockerfile  docker_start.sh  local_network.sh  local_spec.json  move.Dockerfile  restart.sh  test_network.sh  testnet_spec.json  update_spec.sh  variables.sh
