[package]
name = "node-template"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition.workspace = true
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
serde_json = { workspace = true, default-features = true }

sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4", default-features = false }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.22", features = ["server"] }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }

# Local Dependencies
node-template-runtime = { path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4", optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"node-template-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"node-template-runtime/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]

