[package]
name = "pallet-sudo-authorities"
version = "0.0.1"

description = "allows you to sudo change AURA and GRANDPA authorities"
authors = ["gheorghe@gheo.tech"]

edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4", default-features = false }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.8.0-rc4" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.8.0-rc4" }
sp-consensus-grandpa = { default-features = false, git ="https://github.com/paritytech/polkadot-sdk.git", tag = "v1.8.0-rc4" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.8.0-rc4" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"pallet-grandpa/std",
	"sp-consensus-grandpa/std",
	"pallet-aura/std"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-grandpa/std",
	"pallet-aura/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-grandpa/std",
	"pallet-aura/std"
]

